--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
 :root {
     --speed: 1.4s;
 }
@@ -8,6 +7,7 @@
 }
 body {
     background-color: #f3f3f3;
+    font-family: 'Silkscreen', cursive;
 }
 .game_chrome {
     width: 600px;
@@ -111,7 +111,8 @@ body {
 .timer_info {
     font-size: 20px;
     padding-top: 15px;
-    font-family: "Press Start 2P", cursive;
+    /* font-family: "Press Start 2P", cursive; */
+    font-family: 'Silkscreen', cursive;
     color: #333;
     letter-spacing: 1px;
     text-align: center;
@@ -119,7 +120,8 @@ body {
 .timer_info p {
     padding-top: 10px;
     text-align: left;
-    font-size: 10px;
+    font-size: 1rem;
+    font-family: 'Silkscreen', cursive;
 }
 @-webkit-keyframes move {
     0% {
@@ -224,4 +226,27 @@ body {
 .preload *::after {
     animation-duration: 0s !important;
     -webkit-animation-duration: 0s !important;
+}
+
+.swal2-title {
+    position: relative;
+    max-width: 100%;
+    margin: 0;
+    padding: 0.8em 1em 0;
+    color: inherit;
+    font-size: 1.875em;
+    font-family: 'Silkscreen', cursive;
+    font-weight: 600;
+    text-align: center;
+    text-transform: none;
+    word-wrap: break-word;v
+}
+.swal2-styled.swal2-confirm {
+    border: 0;
+    border-radius: 0.25em;
+    background: initial;
+    background: #333;
+    color: #fff;
+    font-size: 1em;
+    font-family: 'Silkscreen', cursive;
 }
